Correct dark mode styles for album button

--- a/assets/css/_posts.pcss
+++ b/assets/css/_posts.pcss
@@ -76,13 +76,6 @@
     @apply text-primary-100;
   }
 
-  & .photo-album {
-    @apply text-primary-100 p-2 border-primary-100;
-    &:hover {
-      @apply bg-primary-900;
-    }
-  }
-
   & .inner-content {
     & h1, & h2, & h3 {
       @apply text-gray-100;
